--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
   gtag('config', 'G-YNDCQXWFLL');
 </script>
 <!-- ads -->
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3031940488037437"
+     crossorigin="anonymous"></script>
+     
 
 
 
